# pymc

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  getting-started.md  index.md
docs/api/: auth.md  connection.md  dial.md  listener.md  nbt.md  network.md  packets.md  proto.md  query.md  realms-api.md  resource.md  text.md
docs/guides/: client.md  commands.md  connection-flow.md  proxy.md  realms.md  server.md
examples/: client.py  conn_lan_host.py  conn_realms.py  debug_connect.py  diagnose.py  gen_terrain.py  get_block.py  lan_connect.py  local.json.example  map.html  map.py  place_block.py  proxy.py  road_vector_spec.md  terrain.config.json.example  terrain_build.py  terrain_gen.py  terrain_road_vector_spec.md
src/mcbe/: __init__.py  chunk.py  conn.py  dial.py  listener.py  network.py
src/mcbe/auth/: live.py  minecraft.py  playfab.py  service.py  xbox.py
src/mcbe/nbt/: __init__.py  codec.py  encoding.py
src/mcbe/nethernet/: __init__.py  conn.py  ldc_network.py  network.py
src/mcbe/proto/: encryption.py  io.py  pool.py  types.py
src/mcbe/raknet/: __init__.py  connection.py  network.py  protocol.py
src/mcbe/realms/: __init__.py
src/mcbe/resource/: pack.py
src/pymc/: __init__.py  conn.py  dial.py  listener.py  network.py
src/pymc/auth/: live.py  service.py  xbox.py
src/pymc/nethernet/: __init__.py  (+5 more)
tests/: test_chunk.py  test_conditional_packets.py  test_conn.py  test_dial_listen.py  test_encryption.py  test_handshake_packets.py  test_io.py  test_nbt.py  test_pool.py  test_raknet.py  test_text.py
tools/: gen_packets.py
(+225 files in other folders)
