[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcbe"
version = "0.1.0"
description = "Minecraft Bedrock Edition protocol library for Python"
readme = {text = "", content-type = "text/plain"}
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=43.0",
    "aiohttp>=3.9",
    "PyJWT>=2.8",
    "websockets>=13.0",
    "aiortc>=1.9",
]

[project.optional-dependencies]
libdatachannel = ["libdatachannel>=0.2"]
realms = ["libdatachannel>=0.2"]
snappy = ["python-snappy>=0.7"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mcbe"]
